@@ -58,7 +58,7 @@ New in spot 2.8.5.dev (not yet released)
        parity_min_even(n) = parity_min(false, n)
 
   - partial_degeneralize() is a new function performing partial
-    degeneralization to get rid of conjunction of Inf terms in
+    degeneralization to get rid of conjunctions of Inf terms in
     acceptance conditions.
 
   - simplify_acceptance_here() and simplify_acceptance() learned to
@@ -67,6 +67,16 @@ New in spot 2.8.5.dev (not yet released)
     acceptance condition these become respectively Fin(i) or Inf(i),
     and the automaton is adjusted to that i also appears where j
     appeared.
+
+  - propagate_marks_vector() and propagate_marks_here() are helper
+    functions for propagatings marks on the automaton: ignoring
+    self-loop and out-of-SCC transitions, marks common to all the
+    input transitions of a state can be pushed to all outgoing
+    transitions of a state, and vice-versa.  This is repeated until a
+    fix point is reached.  propagate_marks_vector() does not modify
+    the automaton and returns a vector of the acc_cond::mark_t that
+    should be on each transition; propagate_marks_here() actually
+    modifies the automaton.
 
 New in spot 2.8.5 (2020-01-04)
 
